# mdec_benchmark

./: pyproject.toml
api/eval/: export_eval_depth.py
cfg/eval/: pointodessey_eval.yaml
src/core/: evaluator.py
src/datasets/: __init__.py  pointodessey.py
src/utils/: __init__.py  collate.py  io.py
