[project]
name = "mdec-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "diffusers>=0.31.0",
    "kornia>=0.8.1",
    "lmdb>=1.7.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pytorch-lightning>=2.5.5",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "timm>=1.0.21",
    "torch>=2.9.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]
